# monopoly

./: .gitignore  DEVELOPMENT.md  README.md  evaluate_agent.py  main.py  pyproject.toml  requirements.txt  run_tests.py  todo.md  tournament_checkpoints.py  train_agent.py
src/monopoly/: __init__.py  api.py  board.py  cards.py  constants.py  dice.py  game.py  logging_utils.py  player.py  rules.py  spaces.py  trading.py
src/monopoly/agent/: __init__.py  action_space.py  board_analysis.py  checkpoints.py  config.py  controller.py  environment.py  evaluation.py  features.py  heuristics.py  league.py  model.py  reward.py  scripted.py  trainer.py  worker_pool.py
src/monopoly/gui/: __init__.py  backend_process.py  launcher.py  rendezvous.py  transport.py
src/monopoly/gui/pygame_frontend/: __init__.py  app.py  board.py  controller.py  generated.py  theme.py  ui_theme.json
tests/: test_agent.py  test_api.py  test_backend_runtime.py  test_board.py  test_board_analysis.py  test_card_matrix.py  test_cards.py  test_checkpoints.py  test_dice.py  test_environment.py  test_evaluation.py  test_game.py  test_interactive.py  test_launcher.py  test_logging_utils.py  test_model.py  test_player.py  test_pygame_frontend.py  test_rendezvous.py  test_rules.py  test_scenarios.py  test_scripted.py  test_spaces.py  test_trading.py  test_transport.py  test_worker_pool.py
