[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monopoly-model"
version = "0.1.0"
description = "Clear OOP Monopoly game model"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["src/monopoly"]
omit = [
	"src/monopoly/gui/*",
	"src/monopoly/gui/**/*",
]

[tool.coverage.report]
fail_under = 84
show_missing = true
skip_covered = false
precision = 2
